kubernetes/infrastructure/elastic/base/elasticsearch-ingress.yaml
# HTTPS Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: elastic
  annotations:
    # Linkerd configuration. Configure Service as Upstream
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # Enable cert-manager to create automatically the SSL certificate and store in Secret
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    cert-manager.io/common-name: elasticsearch.vanillax.xyz
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elasticsearch.vanillax.xyz
      secretName: elasticsearch-tls
  rules:
    - host: elasticsearch.vanillax.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: efk-es-http
                port:
                  number: 9200
